styles/main.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html {
  font-size: 20px;
}

body {
  font-family: "Inter", sans-serif;
}

img {
  max-width: 100%;
}

a {
  text-decoration: none;
  color: inherit;
}

ul {
  list-style: none;
}

.container {
  width: 90%;
  max-width: 1140px;
  margin: 0 auto;
}

.container--small {
  max-width: 900px;
}

.heading {
  font-size: 2rem;
  line-height: 2.6rem;
  color: #172b4d;
}

.heading--subtitle {
  font-size: 2rem;
  color: #ff6163;
}

.section-heading {
  font-size: 2rem;
  text-align: center;
  position: relative;
  color: #172b4d;
}

@media (min-width: 1024px) {
  .section-heading--underlined::after {
    display: none;
  }
}

.section-heading--underlined::after {
  position: absolute;
  left: 50%;
  bottom: -1.2rem;
  content: "";
  width: 48px;
  height: 4px;
  background-color: #ff6163;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
}

.subheading {
  font-size: 1.2rem;
  font-weight: 600;
  color: #172b4d;
}

.base-text {
  font-size: 1rem;
  text-align: center;
  line-height: 30px;
}

.btn-arrow {
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
}

.btn-cta {
  font-size: 0.8rem;
  font-weight: 500;
  color: #fff;
  border: none;
  background-color: #ff6163;
  border-radius: 4px;
  padding: 0.6em;
  cursor: pointer;
  text-transform: capitalize;
}

.btn-cta:hover {
  background-color: rgba(255, 97, 99, 0.9);
  -webkit-box-shadow: 0 8px 16px rgba(255, 97, 99, 0.24);
          box-shadow: 0 8px 16px rgba(255, 97, 99, 0.24);
}

.btn-cta:active {
  background-color: #dd5153;
}

.header {
  padding: 1.2rem 0;
}

.mobile-nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

@media (min-width: 700px) {
  .mobile-nav {
    display: none;
  }
}

.mobile-nav__logo {
  font-weight: 600;
}

.desktop-nav {
  display: none;
}

@media (min-width: 700px) {
  .desktop-nav {
    display: block;
  }
}

.desktop-nav__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.desktop-nav__el {
  margin-right: 1.2rem;
}

.section-hero {
  background-image: url(../images/mobile/header-illsutration-mobile.svg);
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: 50% 0;
  padding: 3rem 0 1.2rem;
}

.section-hero__text {
  text-align: center;
}

.section-hero .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 3rem;
}

.socials {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.socials__item {
  margin-right: 1rem;
}

.socials__item:last-of-type {
  margin-right: 0;
}

.section-works {
  padding: 1.2rem 0;
}

.section-works .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 4.5rem;
}

@media (min-width: 1024px) {
  .section-works .container {
    gap: 2.6rem;
  }
}

.section-works__projects {
  width: 100%;
  display: -ms-grid;
  display: grid;
  grid-gap: 1.2rem;
}

@media (min-width: 600px) {
  .section-works__projects {
    -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  }
}

.card {
  background-color: #f9eaea;
  border: 1px solid #c1c7d0;
  border-radius: 8px;
  position: relative;
}

.card__portfolio-img {
  width: 100%;
}

.card__portfolio-info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 0.8rem;
  text-align: center;
  position: absolute;
  bottom: 0;
  left: 0;
  border-radius: 8px;
  background-color: #fff;
  padding: 1.2rem;
  width: 100%;
}

.card__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  gap: 0.5rem;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.card__list-item {
  font-size: 0.6rem;
  background-color: #f9eaea;
  padding: 0.5em 0.6em;
  border-radius: 4px;
}

.card__list-item--skill {
  background-color: #fff;
  color: #ff6163;
}

.card__skills {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 1.2rem;
  padding: 1.2rem;
}

.card__icon {
  display: -ms-grid;
  display: grid;
  place-content: center;
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  background-color: #fff;
  margin: 2rem 0 3rem;
}

.section-about {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 1.2rem;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 1.5rem 0;
  background-image: url(../images/mobile/illustration-about-me-mobile.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: 0% -2%;
}

.section-about__skills {
  margin-top: 1.5rem;
  width: 100%;
}

.section-about__skills .container {
  display: -ms-grid;
  display: grid;
  grid-gap: 1.2rem;
}

@media (min-width: 750px) {
  .section-about__skills .container {
    -ms-grid-columns: (1fr)[3];
        grid-template-columns: repeat(3, 1fr);
  }
}

.section-contact {
  background-image: url(../images/mobile/illustration-contact-form.svg);
  background-repeat: no-repeat;
  background-position: 100% 100%;
  padding: 1.2rem 0;
}

.section-contact .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 3rem;
}

.contact-form {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 1.2rem;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.contact-form__textarea, .contact-form__input {
  width: 100%;
  padding: 0.5rem;
  font-family: inherit;
  border: 1px solid #d0d9d4;
  border-radius: 4px;
}

.contact-form__textarea:focus, .contact-form__input:focus {
  outline: none;
  border: 1px solid #ff6163;
}

.section-footer {
  padding: 1.2rem 0 5rem;
}

.section-footer__socials {
  margin-bottom: 1rem;
}
/*# sourceMappingURL=main.css.map */

